<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bt.edu.cst.www.trackskeep.MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="10dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="27dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="27dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/scrollView4">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Manage your Attendance Record" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/cte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cte"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/addButton1"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_red_light"
                    android:onClick="butOne"
                    android:text="+"
                    android:textAllCaps="false"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/missed1"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:gravity="center"
                    android:textColor="@android:color/holo_red_dark" />

                <Button
                    android:id="@+id/minusButton1"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_light"
                    android:onClick="butTwo"
                    android:text="-"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/dis1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:text="@string/dis1" />

                <Button
                    android:id="@+id/addButton2"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:background="@android:color/holo_red_light"
                    android:text="+"
                    android:textSize="20sp"
                    android:onClick="butThree"/>

                <TextView
                    android:id="@+id/missed2"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/holo_red_dark"
                    android:text="0"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/minusButton2"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_light"
                    android:text="-"
                    android:onClick="butFour"
                    android:textSize="20sp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/dis2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dis2"
                    android:textColor="@android:color/black"/>

                <Button
                    android:id="@+id/addButton3"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:background="@android:color/holo_red_light"
                    android:text="+"
                    android:onClick="butFive"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/missed3"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/holo_red_dark"
                    android:text="0"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/minusButton3"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_light"
                    android:text="-"
                    android:onClick="butSix"
                    android:textSize="20sp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/cpl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cpl"
                    android:textColor="@android:color/black"/>

                <Button
                    android:id="@+id/addButton4"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:background="@android:color/holo_red_light"
                    android:text="+"
                    android:onClick="butSeven"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/missed4"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/holo_red_dark"
                    android:text="0"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/minusButton4"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_light"
                    android:text="-"
                    android:onClick="butEight"
                    android:textSize="20sp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/itm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/itm"
                    android:textColor="@android:color/black"/>

                <Button
                    android:id="@+id/addButton5"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:background="@android:color/holo_red_light"
                    android:text="+"
                    android:onClick="butNine"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/missed5"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/holo_red_dark"
                    android:text="0"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/minusButton5"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_light"
                    android:text="-"
                    android:onClick="butTen"
                    android:textSize="20sp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/apply"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_dark"
                    android:text="@string/apply"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"/>
            </TableRow>
        </TableLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textStyle="italic"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView4"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
